# avrotize-rs

./: .replit  CHANGELOG.md  Cargo.toml  Justfile  README.md  replit.md
.github/workflows/: CI.yml
.just/: hooks.just
src/: avro.rs  common.rs  converter.rs  dependency_resolver.rs  lib.rs  main.rs
src/common/: generic.rs  hash.rs  inline.rs  names.rs  traversal.rs
src/converter/: analysis.rs  composition.rs  conversion.rs  definitions.rs  emptiness.rs  merging.rs  postprocess.rs  references.rs  state.rs  structs.rs  types.rs  unions.rs  utils.rs
tests/: cli.rs
tests/fixtures/avro/: array_contains.avsc  array_maxitems.avsc  array_of_objects.avsc  array_uniqueitems.avsc  array_with_additional_items.avsc  basic_string_schema.avsc  basic_string_schema_with_title.avsc  enum_string_property.avsc  nested_object_and_array.avsc  object_allof.avsc  object_dependentrequired.avsc  object_dependentschemas.avsc  object_if_then_else.avsc  object_maxproperties.avsc  object_minproperties.avsc  object_pattern_properties.avsc  object_with_boolean_and_number.avsc  object_with_const_field.avsc  object_with_default_value.avsc  object_with_defs.avsc  object_with_enum_array.avsc  object_with_explicit_nullable_type.avsc  object_with_map_of_records.avsc  object_with_map_via_additional_props.avsc  object_with_oneof.avsc  object_with_oneof_anyof.avsc  object_with_optional.avsc
tests/fixtures/jsonschema/: array_contains.json  array_maxitems.json  array_of_objects.json  array_uniqueitems.json  array_with_additional_items.json  basic_string_schema_with_title.json  enum_string_property.json  nested_object_and_array.json  number_exclusive_max.json  number_exclusive_min.json  number_exclusive_multipleof.json  number_with_maximum.json  object_allof.json  object_dependentrequired.json  object_dependentschemas.json  object_if_then_else.json  object_maxproperties.json  object_minproperties.json  object_not.json  object_pattern_properties.json  object_with_boolean_and_number.json  object_with_const_field.json  object_with_default_value.json  object_with_defs.json  object_with_enum_array.json  object_with_explicit_nullable_type.json  object_with_map_of_records.json  object_with_map_via_additional_props.json  object_with_oneof_anyof.json  object_with_optional.json  object_with_remote_ref.json  recursive_ref.json  string_format_email.json  (+2 more)
tests/snapshots/: cli__array_contains.diff.snap  cli__array_contains.snap  cli__array_maxitems.diff.snap  cli__array_maxitems.snap  cli__array_of_objects.diff.snap  cli__array_of_objects.snap  cli__array_uniqueitems.diff.snap  cli__array_uniqueitems.snap  cli__array_with_additional_items.diff.snap  cli__array_with_additional_items.snap  cli__basic_object_schema.snap  cli__basic_object_schema.snap.new  cli__basic_string_schema.snap  cli__basic_string_schema_with_title.snap  cli__boolean_false_schema.snap  cli__enum_string_property.diff.snap  cli__enum_string_property.snap  cli__nested_object_and_array.diff.snap  cli__nested_object_and_array.snap  cli__object_allof.diff.snap  cli__object_allof.snap  cli__object_dependentrequired.snap  cli__object_dependentschemas.snap  cli__object_if_then_else.snap  cli__object_pattern_properties.snap  cli__object_with_boolean_and_number.snap  cli__object_with_const_field.diff.snap  cli__object_with_const_field.snap  cli__object_with_default_value.diff.snap  cli__object_with_default_value.snap  cli__object_with_defs.snap  cli__object_with_enum_array.diff.snap  cli__object_with_enum_array.snap  cli__object_with_explicit_nullable_type.snap  cli__object_with_map_of_records.diff.snap  cli__object_with_map_of_records.snap  cli__object_with_map_via_additional_props.snap  cli__object_with_oneof.snap  cli__object_with_optional.snap  cli__object_with_remote_ref.snap
tools/avrotize-gen/: README.md  pyproject.toml
