[package]
name = "jsonschema2avro"
version = "0.1.0"
edition = "2021"

[features]
default = []
cli = ["clap"]
trace = ["crustrace", "crustrace-mermaid", "tracing", "tracing-subscriber"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
url = "2.5"
reqwest = { version = "0.12", features = ["blocking", "json"] }
regex = { version = "1.11.2", features = ["std"], default-features = false }
xxhash-rust = { version = "0.8.15", features = ["xxh64"] }

# Optional dependencies
clap = { version = "4", features = ["derive"], optional = true }
crustrace = { version = "0.1.9", features = ["debug"], optional = true }
crustrace-mermaid = { version = "0.1.6", optional = true }
tracing = { version = "0.1.41", optional = true }
tracing-subscriber = { version = "0.3.20", optional = true }

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
predicates = "3"
insta = { version = "1", features = ["json"] }
rstest = "0.26"
similar = { version = "2.7.0", features = ["inline"] }

[patch.crates-io]
crustrace = { path = "/home/louis/dev/crustrace/crustrace" }
crustrace-core = { path = "/home/louis/dev/crustrace/crustrace-core" }
crustrace-mermaid = { path = "/home/louis/dev/crustrace/crustrace-mermaid" }
