[package]
name = "avrotize"
version = "0.1.0"
edition = "2021"
description = "Convert JSON Schema to Avro with Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lmmx/avrotize-rs"
homepage = "https://github.com/lmmx/avrotize-rs"
documentation = "https://docs.rs/avrotize"
readme = "README.md"
keywords = ["avro", "jsonschema", "converter", "serde", "schema"]
categories = ["encoding", "command-line-utilities"]

[features]
default = []
cli = ["clap"]
trace = ["crustrace", "crustrace-mermaid", "tracing", "tracing-subscriber"]

[[bin]]
name = "jsonschema2avro"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
url = "2.5"
reqwest = { version = "0.12", features = ["blocking", "json"] }
regex = { version = "1.11.2", features = ["std"], default-features = false }
xxhash-rust = { version = "0.8.15", features = ["xxh64"] }

# Optional dependencies
clap = { version = "4", features = ["derive"], optional = true }
crustrace = { version = "0.1.9", features = ["debug"], optional = true }
crustrace-mermaid = { version = "0.1.6", optional = true }
tracing = { version = "0.1.41", optional = true }
tracing-subscriber = { version = "0.3.20", optional = true }

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
predicates = "3"
insta = { version = "1", features = ["json"] }
rstest = "0.26"
similar = { version = "2.7.0", features = ["inline"] }

# [patch.crates-io]
# crustrace = { path = "/home/louis/dev/crustrace/crustrace" }
# crustrace-core = { path = "/home/louis/dev/crustrace/crustrace-core" }
# crustrace-mermaid = { path = "/home/louis/dev/crustrace/crustrace-mermaid" }
